Fix text overflow and add hyphenation in notes

--- a/assets/style.sass
+++ b/assets/style.sass
@@ -115,8 +115,17 @@ button, input[type=submit]
     h1
       color: $yellow
       text-align: center
+      display: -webkit-box
+      -webkit-line-clamp: 2
+      -webkit-box-orient: vertical
+      overflow: hidden
+      text-overflow: ellipsis
+      word-break: break-word
+      hyphens: auto
     p
       color: #f5f5f5
+      word-break: break-word
+      hyphens: auto
 
     //so the notes don't show at the same index as the modal
     z-index: 0
